fix(sonar): resolve SonarQube code smells across backend and test files (#247)